FIX: Footer Positioning Error && <a> not showing on footer

--- a/2025-group1/imdb2/resources/style.css
+++ b/2025-group1/imdb2/resources/style.css
@@ -87,10 +87,13 @@ a:hover {
   color: white;
   text-align: center;
   padding: 1rem;
-  position: fixed;
-  bottom: 0;
-  left: 0;
+  position: static;
   width: 100%;
+}
+.footer a {
+  color: rgb(16, 185, 214);
+  text-decoration: underline;
+  
 }
 
 /* Sign-in form */
